<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:background="@drawable/card_back"
    android:contentDescription="@string/card_view_description"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true"
    tools:ignore="TextSizeCheck">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_back">

        <!-- TextView for Temperature -->
        <TextView
            android:id="@+id/idTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/temperature_description"
            android:gravity="center"
            android:text="@string/_20"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!-- TextView for Time -->
        <TextView
            android:id="@+id/idTVTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVTemperature"
            android:contentDescription="@string/time_description"
            android:gravity="center"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <!-- ImageView for Condition -->
        <ImageView
            android:id="@+id/idIVCondition"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/idTVTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/condition_description"
            android:padding="4dp"
            android:src="@drawable/cloudy"
            tools:ignore="ImageContrastCheck" />

        <!-- TextView for Wind Speed -->
        <TextView
            android:id="@+id/idTVWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVCondition"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/wind_speed_description"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/_13"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
